# University_Management

./: CMakeLists.txt  readme.md
CLASS_PARSER/: Class_Section_Parser.cpp  Class_Section_Parser.h  Course_Parser.cpp  Course_Parser.h  String_Utils.h
SOURCE_CODE/CLASS_OBJECT/: Class_Section.cpp  Class_Section.h  Course.cpp  Course.h
SOURCE_CODE/CLASS_PARSER/: Class_Section_Parser.cpp  Class_Section_Parser.h  Course_Parser.cpp  Course_Parser.h
SOURCE_CODE/DATA/DATA_ACCESSING/: FileManaging.cpp  FileManaging.h  File_Managing.cpp  File_Managing.h
SOURCE_CODE/DATA/STORAGE/: ClassSection.txt  Course.txt  Major.txt  Score.txt  Student.txt  Teacher.txt
SOURCE_CODE/LOGIC/CLASS_SECTION_SERVICE/: ClassSectionService.cpp  ClassSectionService.h  Class_Section_Service.cpp  Class_Section_Service.h  IClassSectionService.h  I_Class_Section_Service.h
SOURCE_CODE/LOGIC/COURSE_SERVICE/: CourseService.cpp  CourseService.h  Course_Service.cpp  Course_Service.h  ICourseService.h  I_Course_Service.h
SOURCE_CODE/LOGIC/MAJOR_SERVICE/: IMajorService.h  MajorRequirement.h  MajorService.cpp  MajorService.h
SOURCE_CODE/LOGIC/MajorService/: IMajorService.h  MajorService.cpp  MajorService.h
SOURCE_CODE/LOGIC/REGISTRATION_SERVICE/: IRegistrationService.h
SOURCE_CODE/LOGIC/RegistrationService/: IRegistrationService.h  RegistrationService.cpp  RegistrationService.h
SOURCE_CODE/LOGIC/SCHEDULE_SERVICE/: IScheduleService.h  ScheduleService.cpp  ScheduleService.h
SOURCE_CODE/LOGIC/SCORE_SERVICE/: IScoreService.h  ScoreService.cpp  ScoreService.h
SOURCE_CODE/MODULE/HEADER/: ClassSection.h  Course.h  Major.h  Person.h  Score.h  Student.h  Teacher.h  Time.h
SOURCE_CODE/MODULE/IMPLEMENTATION/: ClassSection.cpp  Course.cpp  Major.cpp  Person.cpp  Score.cpp  Student.cpp  Teacher.cpp  Time.cpp
SOURCE_CODE/MODULE/UTILS/: stringUltils.cpp
SOURCE_CODE/MODULE/include/: Teacher.h
SOURCE_CODE/MODULE/src/: Student.cpp  Teacher.cpp
